# tables

./: .gitignore  AUDIT-GNOME-GUI-SPEC.md  Cargo.toml  README.md  SPEC.md  io.github.hanthor.tables.json  justfile  meson.build
.github/workflows/: ci.yml  publish-flatpak.yml  tag.yml
src/: engine.js  engine.py  engine.rs  export.rs  fileio.py  main.py  main.rs  meson.build  tables.in  window.py  window.rs
src/engine/: Cargo.toml
src/engine/src/: lib.rs
subprojects/: suite-common
tests/gui/: test_tables.py  test_tables_e2e.py  test_tables_shortcuts.py
tests/unit/: test_fileio.py  test_formulas.py
